2003-11-27  Christopher Faylor  <cgf@redhat.com>

	* lib/Makefile.in: Use make function to locate .mri file to allow
	building in directory other than source directory.

2003-11-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/vfw32.def: Remove, replacing with ...
	* lib/msvfw32.def: New file.
	* lib/avicap32.def: New file.
	* lib/avifil32.def: New file.
	* lib/vfw32.mri: New file.
	* Makefile.in: (MRI_FILES, MIMPLIBS): New vars for
	import libs with multiple dll's.
	(LIBS): Add MIMPLIBS.
	(DISTFILES): Add MRI_FILES.
	(libvfw32.a): Build using mri script.

2003-11-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (PAGE_*): Group defines together. Change
	constants to hex notation.

2003-11-15  Manu B  <manubee@users.sourceforge.net>

	* include/commctrl.h (TabCtrl_GetImageList): Add macro.

2003-11-13 Martin Fuchs  <martin-fuchs@gmx.net>

	* include/shlobj.h (ILAppendID, ILClone, ILCloneFirst, ILCombine,
	ILFindChild, ILFindLastID, ILFree, ILGetNext, ILGetSize, ILIsEqual,
	ILIsParent, ILLoadFromStream, ILRemoveLastID, ILSaveToStream):
	Add prototypes.
	* lib/shell32.def: Add stubs.

	* include/commctrl.h (ListView_FindItem): Add type cast to avoid
	compiler warnings.

2003-11-13  Hans Leidekker <hans@it.vu.nl>

	* include/winbase.h (WIN32_STREAM_ID): Correct typedef.

2003-10-13  Andre Auzi  <aauzi@users.sourceforge.net>

	* include/windows.h (CopyCursor): Define as macro.

2003-10-13  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/winnt.h (CONTAINING_RECORD): Add macro.

2003-10-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h: (FILE_SUPERSEDED, FILE_OPENED, FILE_CREATED,
	FILE_OVERWRITTEN, FILE_EXISTS, FILE_DOES_NOT_EXIST): Remove
	defines.

2003-10-13  Filip Navara  <xnavara@volny.cz>

	* include/commctrl.h: (DSA_*):Add prototypes, typedefs and
	defines for Dynamic Storage Arrays.
	(DPA_*): Likewise, for Dynamic Pointer Arrays.
	(FlatSB_*, InitializeFlatSB, InitializeFlatSB): Add prototypes