@@ -1,3 +1,10 @@
+2003-12-01  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/winnt.h (GetCurrentFiber): Remove duplicate prototype.
+	(GetFiberData); Likewise.
+	(GetCurrentFiber): Change volatile to __volatile__.
+	(GetFiberData); Likewise.
+
 2003-11-27  Christopher Faylor  <cgf@redhat.com>
 
 	* lib/Makefile.in: Use make function to locate .mri file to allow
